--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 body {
   margin: 0;
-  background-color: #ffeff5;
+  background-color: #fff;
 }
 
 #player-container {
@@ -53,7 +53,6 @@ body {
   bottom: 0;
   left: 0;
   background-color: #fff;
-  opacity: 0.5;
   z-index: 2;
 }
 
